Drop usage of omniauth gem

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,4 +2,9 @@
   %head
     %title Jenny
   %body
+    - if(flash[:notice])
+      %p
+        =flash[:notice]
+    - if(session[:authenticated])
+      %a{:href => '/logout'} Logout
     =yield
