Start over with modular sinatra

--- a/views/user/login.haml
+++ b/views/user/login.haml
@@ -1,10 +1,4 @@
-%h1 HI!
-%p welcome
-/ %a{:href => '/auth/github'} Login with Github
-/ %br
-/ %a{:href =>'/auth/facebook'} Login with facebook
-/ %br
-%form{ :action => "/auth/identity/callback", :method => "post"}
+%form{ :action => "/user/login", :method => "post"}
   %fieldset
     %ul
       %li
@@ -14,4 +8,4 @@
         %label{:for => "password"} Password:
         %input{:type => "password", :name => "password", :class => "password"}
     %input{:type => "submit", :value => "Send", :class => "button"}
-    %a{:href => '/auth/identity/new'} Register
+    %a{:href => '/user/register'} Register
