--- a/views/user/register.haml
+++ b/views/user/register.haml
@@ -1,13 +1,16 @@
-%form{ :action => "/auth/identity/new", :method => "post"}
+%form{ :action => "/user/register", :method => "post"}
   %fieldset
     %ul
       %li
         %label{:for => "username"} UserName:
         %input{:type => "text", :name => "username", :class => "text"}
       %li
+        %label{:for => "email"} UserName:
+        %input{:type => "text", :name => "email", :class => "text"}
+      %li
         %label{:for => "password"} Password:
         %input{:type => "password", :name => "password", :class => "password"}
       %li
-        %label{:for => "password_confirm"} Confirm Password:
-        %input{:type => "password", :name => "password_confirm", :class => "password"}
+        %label{:for => "password"} Confirm Password:
+        %input{:type => "password", :name => "password", :class => "password"}
     %input{:type => "submit", :value => "Send", :class => "button"}
