--- a/views/index.haml
+++ b/views/index.haml
@@ -1,2 +1,12 @@
-%a{:href=>'/logout'} Logout
-Hi
+%h3= @current_user
+
+- if @current_user
+  %div
+    %a{:href => '/auth/logout'} Logout
+- else
+  %div
+    %a{:href => '/auth/register'} Register
+  %div
+    %a{:href => '/auth/login'} Login
+
+%h1= @test
