--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,1 +1,11 @@
-=yield
+%html
+  %head
+    %Title Jenny
+    %link{rel:"stylesheet", href:"//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"}
+    %link{rel:"stylesheet", href:"../../public/css/user_login_register.css"}
+
+    %script{src:"//code.jquery.com/jquery-1.10.2.min.js"}
+    %script{src:"//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"}
+  %body
+    %label{style:"font-color:red"}=flash[:notice]
+    =yield
