--- a/views/auth/login.haml
+++ b/views/auth/login.haml
@@ -1,11 +1,18 @@
-%form{ :action => "/auth/login", :method => "post"}
+%form{ action:"/auth/login", method:"post"}
   %fieldset
-    %ul
+    %ul{style:"list-style-type:none"}
       %li
-        %label{:for => "username"} UserName:
-        %input{:type => "text", :name => "username", :class => "text"}
+        %span{class:"labels"}
+          %label{for:"username"} UserName:
+        %span{class:"values"}
+          %input{type:"text", name:"username", class:"text"}
       %li
-        %label{:for => "password"} Password:
-        %input{:type => "password", :name => "password", :class => "password"}
-    %input{:type => "submit", :value => "Send", :class => "button"}
-    %a{:href => '/auth/register'} Register
+        %span{class:"labels"}
+          %label{for:"password"} Password:
+        %span{class:"values"}
+          %input{type:"password", name:"password", class:"password"}
+      %li
+        %span{class:"labels"}
+          %input{type:"submit", value:"Send", class:"button"}
+        %span{class:"values"}
+          %a{href:'/auth/register'} Register
