--- a/views/auth/login.haml
+++ b/views/auth/login.haml
@@ -3,7 +3,7 @@
     %ul{style:"list-style-type:none"}
       %li
         %span{class:"labels"}
-          %label{for:"username"} UserName:
+          %label{for:"username"} User Name:
         %span{class:"values"}
           %input{type:"text", name:"username", class:"text"}
       %li
@@ -13,6 +13,6 @@
           %input{type:"password", name:"password", class:"password"}
       %li
         %span{class:"labels"}
-          %input{type:"submit", value:"Send", class:"button"}
+          %input{type:"submit", value:"Login", class:"button"}
         %span{class:"values"}
           %a{href:'/auth/register'} Register
