--- a/views/auth/register.haml
+++ b/views/auth/register.haml
@@ -1,25 +1,25 @@
-%form{id:'register_form', action:'/auth/register', :method => 'post'}
+%form{id: 'register_form', action: '/auth/register', method: 'post'}
   %fieldset
-    %ul{style:'list-style-type:none'}
+    %ul{style: 'list-style-type: none'}
       %li
-        %span{class:'labels'}
-          %label{for:'username'} UserName:
-        %span{class:'values'}
-          %input{type:'text', name:'username', class:'text'}
+        %span{class: 'labels'}
+          %label{for: 'username'} UserName:
+        %span{class: 'values'}
+          %input{type: 'text', name: 'username', class: 'text'}
       %li
-        %span{class:'labels'}
-          %label{for:'email'} E-mail:
-        %span{class:'values'}
-          %input{type:'text', name:'email', class:'text'}
+        %span{class: 'labels'}
+          %label{for: 'email'} E-mail:
+        %span{class: 'values'}
+          %input{type: 'text', name: 'email', class: 'text'}
       %li
-        %span{class:'labels'}
-          %label{for:'password'} Password:
-        %span{class:'values'}
-          %input{type:'password', name:'password', class:'text'}
+        %span{class: 'labels'}
+          %label{for: 'password'} Password:
+        %span{class: 'values'}
+          %input{type: 'password', name: 'password', class: 'text'}
       %li
-        %span{class:'labels'}
-          %label{for:'password'} Confirm Password:
-        %span{class:'values'}
-          %input{type:'password', name:'password', class:'text'}
+        %span{class: 'labels'}
+          %label{for: 'password'} Confirm Password:
+        %span{class: 'values'}
+          %input{type: 'password', name: 'password', class: 'text'}
       %li
-        %input{type:'submit', value:'Send', class:'button'}
+        %input{type: 'submit', value: 'Send', class: 'button'}
