--- a/views/index.haml
+++ b/views/index.haml
@@ -1,23 +1,23 @@
 ____ PICTURE ____
 - if user
   %div
-    %a{href:'/auth/logout'} Logout
+    %a{href: '/auth/logout'} Logout
 
   %h2 Projects
-  %ul{style:"list-style-type:none"}
+  %ul{style: "list-style-type:none"}
     -user.projects.each do |project|
       %li= project.name
     %li
       - if session[:show_name_text_box]
-        %form{id:'new_project_form', action:"/project", :method => "post"}
-          %label{for:"name"} Project Name:
-          %input{type:"text", name:"name", class:"text"}
-          %input{type:"submit", value:"Send", class:"button"}
+        %form{id: 'new_project_form', action: "/project", method: "post"}
+          %label{for: "name"} Project Name:
+          %input{type: "text", name: "name", class: "text"}
+          %input{type: "submit", value: "Send", class: "button"}
       - else
-        %a{href:'/project/new'} Create new project
+        %a{href: '/project/new'} Create new project
 
 - else
   %div
-    %a{href:'/auth/register'} Register
+    %a{href: '/auth/register'} Register
   %div
-    %a{href:'/auth/login'} Login
+    %a{href: '/auth/login'} Login
