--- a/views/home_layout.haml
+++ b/views/home_layout.haml
@@ -4,10 +4,7 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1.0'}
     %meta{name: 'description', content: 'Agile development software'}
     %meta{name: 'author', content: 'Angel Venchev'}
-    - if locals[:page_title]
-      %title= locals[:page_title]
-    - else
-      %title Jenny
+    %title Jenny
     %link{rel: "stylesheet", href: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"}
     %link{rel: "stylesheet", href: "../../public/css/user_login_register.css"}
     %link{rel: "stylesheet", href: "../../public/css/layout.css"}
@@ -28,12 +25,9 @@
         %div{class: "collapse navbar-collapse"}
           %ul{class: "nav navbar-nav"}
             %li{class: "active"}
-              %a{href: "/"}Projects
+              %a{href: "/"}Home
             %li
-              %a{href: '/auth/logout'}Logout
-            %li
-              / should lead to user settings
-              %a=user
+              %a{href: "/posts/create"}New Post
     %div{class: "container"}
       -if flash[:notice]
         %p{class: "alert alert-success"}
