Reorganization and styling

--- a/views/auth/register.haml
+++ b/views/auth/register.haml
@@ -3,7 +3,7 @@
     %ul{style: 'list-style-type: none'}
       %li
         %span{class: 'labels'}
-          %label{for: 'username'} UserName:
+          %label{for: 'username'} User Name:
         %span{class: 'values'}
           %input{type: 'text', name: 'username', class: 'text'}
       %li
@@ -18,8 +18,8 @@
           %input{type: 'password', name: 'password', class: 'text'}
       %li
         %span{class: 'labels'}
-          %label{for: 'password'} Confirm Password:
+          %label{for: 'password'} Confirm:
         %span{class: 'values'}
           %input{type: 'password', name: 'password', class: 'text'}
       %li
-        %input{type: 'submit', value: 'Send', class: 'button'}
+        %input{type: 'submit', value: 'Register', class: 'button'}
