--- a/views/home_layout.haml
+++ b/views/home_layout.haml
@@ -24,10 +24,10 @@
           %a{class: "navbar-brand", href:"/"}Jenny
         %div{class: "collapse navbar-collapse"}
           %ul{class: "nav navbar-nav"}
-            %li{class: "active"}
-              %a{href: "/"}Home
             %li
-              %a{href: "/posts/create"}New Post
+              %a{href: "/auth/register"}Register
+            %li
+              %a{href: "/auth/login"}Login
     %div{class: "container"}
       -if flash[:notice]
         %p{class: "alert alert-success"}
