--- a/views/layout.haml
+++ b/views/layout.haml
@@ -24,16 +24,14 @@
             %span{class: "icon-bar"}
             %span{class: "icon-bar"}
             %span{class: "icon-bar"}
-          %a{class: "navbar-brand", href:"/"}Jenny
+          %a{class: "navbar-brand", href:"/projects"}Jenny
         %div{class: "collapse navbar-collapse"}
           %ul{class: "nav navbar-nav"}
-            %li{class: "active"}
-              %a{href: "/"}Projects
             %li
               %a{href: '/auth/logout'}Logout
             %li
               / should lead to user settings
-              %a=user
+              %a=user.username
     %div{class: "container"}
       -if flash[:notice]
         %p{class: "alert alert-success"}
