--- a/views/project/new.haml
+++ b/views/project/new.haml
@@ -1,4 +1,10 @@
 %form{id: 'new_project_form', action: "/projects", method: "post"}
-  %label{for: "name"} Project Name:
-  %input{type: "text", name: "name", class: "text"}
-  %input{type: "submit", value: "Send", class: "button"}
+  %ul
+    %li
+      %label{for: "name"} Project Name:
+      %input{type: "text", name: "name", class: "text"}
+    %li
+      %label{for: "description"} Description:
+      %textarea{name: "description", class: "text", form:'new_project_form'}
+  %div
+    %input{type: "submit", value: "Send", class: "button"}
