--- a/views/auth/login.haml
+++ b/views/auth/login.haml
@@ -1,6 +1,6 @@
-%form{id: 'login_form', action: '/auth/login', method: 'post'}
+%form{id: 'login_form', class: 'form',action: '/auth/login', method: 'post'}
   %fieldset
-    %ul{style: 'list-style-type: none'}
+    %ul
       %li
         %span{class: 'labels'}
           %label{for: 'username'} User Name:
