--- a/views/project/new.haml
+++ b/views/project/new.haml
@@ -1,10 +1,14 @@
-%form{id: 'new_project_form', action: "/projects", method: "post"}
+%form{id: 'new_project_form', class: 'form', action: "/projects", method: "post"}
   %ul
     %li
-      %label{for: "name"} Project Name:
-      %input{type: "text", name: "name", class: "text"}
+      %span{class: 'labels'}
+        %label{for: "name"} Project Name:
+      %span{class: 'values'}
+        %input{type: "text", name: "name", class: "text"}
     %li
-      %label{for: "description"} Description:
-      %textarea{name: "description", class: "text", form:'new_project_form'}
-  %div
-    %input{type: "submit", value: "Send", class: "button"}
+      %span{class: 'labels'}
+        %label{for: "description"} Description:
+      %span{class: 'values'}
+        %textarea{name: "description", class: "text", form:'new_project_form'}
+    %li
+      %input{type: "submit", value: "Send", class: "button"}
