--- a/views/project/index.haml
+++ b/views/project/index.haml
@@ -2,4 +2,10 @@
   %li
     %a{href: '/projects/new'}Create a new project
   -user.projects.each do |project|
-    %li= project.name
+    %li
+      %form{id: 'login_form',action: '/projects/show', method: 'get'}
+        %input{type: 'hidden', name: 'id', value: "#{project.id}"}
+        %a
+          %input{type: 'submit', value: "#{project.name}"}
+      / %a{href:"/projects/show"}
+      /   =project.name
