--- a/views/project/index.haml
+++ b/views/project/index.haml
@@ -3,5 +3,5 @@
     %a{href: '/projects/new'}Create a new project
   -user.projects.each do |project|
     %li
-      %a{href:"/projects/#{project.id}"}
+      %a{href:"/projects/#{project.id}/edit"}
         =project.name
