Refactor and rename

--- a/views/project/show.haml
+++ b/views/project/show.haml
@@ -6,11 +6,11 @@
     %td
       %a{href: '/'}Create New Iteration
     %td
-      %a{href: "/project/#{project.id}?step=-1"} previous
+      %a{href: "/projects/#{project.id}?step=-1"} previous
     %td
-      %a{href: "/project/#{project.id}?current=1"} current
+      %a{href: "/projects/#{project.id}?current=1"} current
     %td
-      %a{href: "/project/#{project.id}?step=1"} next
+      %a{href: "/projects/#{project.id}?step=1"} next
   %tr
     %td Backlog
     - 3.times do |i|
