Add iteration creation, no tests

--- a/views/project/show.haml
+++ b/views/project/show.haml
@@ -4,7 +4,7 @@
 %table{border: '1', cellspacing: '10px'}
   %tr
     %td
-      %a{href: '/'}Create New Iteration
+      %a{href: "/projects/#{project.id}/iterations/new"}Create New Iteration
     %td
       %a{href: "/projects/#{project.id}?step=-1"} previous
     %td
