--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,12 +9,15 @@
     - else
       %title Jenny
     %link{rel: "stylesheet", href: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"}
-    %link{rel: "stylesheet", href: "../../public/css/user_login_register.css"}
-    %link{rel: "stylesheet", href: "../../public/css/layout.css"}
+    %link{rel: "stylesheet", href: "//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css"}
+    %link{rel: "stylesheet", href: "/public/css/user_login_register.css"}
+    %link{rel: "stylesheet", href: "/public/css/layout.css"}
 
     %script{src: "//code.jquery.com/jquery-1.10.2.min.js"}
+    %script{src: "//code.jquery.com/ui/1.10.4/jquery-ui.js"}
     %script{src: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"}
-    %script{src: "../../public/js/remove_alert.js"}
+    %script{src: "/public/js/remove_alert.js"}
+    %script{src: "/public/js/datepicker.js"}
   %body
     %div{class: "navbar navbar-inverse navbar-fixed-top"}
       %div{class: "container"}
