Add UserStory creation workflow

--- a/views/iteration/new.haml
+++ b/views/iteration/new.haml
@@ -2,12 +2,12 @@
   %ul
     %li
       %span{class: 'labels'}
-        %label{for: "title"} Iteration title:
+        %label{for: "title"} Title:
       %span{class: 'values'}
         %input{type: "text", name: "title", class: "text"}
     %li
       %span{class: 'labels'}
-        %label{for: "theme"} Iteration theme:
+        %label{for: "theme"} Theme:
       %span{class: 'values'}
         %input{type: "text", name: "theme", class: "text"}
     %li
