--- a/views/project/show.haml
+++ b/views/project/show.haml
@@ -5,6 +5,7 @@
   %tr
     %td
       %a{href: "/projects/#{project.id}/iterations/new"}Create New Iteration
+      %a{href: "/projects/#{project.id}/user_stories/new"}Create New User Story
     %td
       %a{href: "/projects/#{project.id}?step=-1"} previous
     %td
