--- a/views/user_story/new.haml
+++ b/views/user_story/new.haml
@@ -7,14 +7,16 @@
         %input{type: "text", name: "title", class: "text"}
     %li
       %span{class: 'labels'}
-        %label{for: "theme"} Description:
+        %label{for: "description"} Description:
       %span{class: 'values'}
-        %input{type: "text", name: "theme", class: "text"}
+        %input{type: "text", name: "description", class: "text"}
     %li
       %span{class: 'labels'}
         %label{for: "iteration_id"} Iteration:
       %span{class: 'values'}
         %select{name:"iteration_id", form:"new_user_story_form"}
+          %option{value: "-1"}
+            Backlog
           -iterations.each do |iteration|
             %option{value: "#{iteration.id}"}
               ="#{iteration.title} (#{iteration.start_date.to_date} - #{iteration.end_date.to_date})"
