Add UserStory show action

--- a/views/user_story/new.haml
+++ b/views/user_story/new.haml
@@ -1,4 +1,4 @@
-%form{id: 'new_user_story_form', class: 'form', action: "/projects/#{project_id}/user_stories", method: "post"}
+%form{id: 'new_user_story_form', class: 'form', action: "/projects/#{project.id}/user_stories", method: "post"}
   %ul
     %li
       %span{class: 'labels'}
