Add task edit option

--- a/views/task/new.haml
+++ b/views/task/new.haml
@@ -1,4 +1,4 @@
-%form{id: 'new_task_form', class: 'form', action: "/projects/#{locals[:project].id}/user_stories/#{locals[:story].id}/tasks", method: "post"}
+%form{id: 'new_task_form', class: 'form', action: "/projects/#{project.id}/user_stories/#{story.id}/tasks", method: "post"}
   %ul
     %li
       %span{class: 'labels'}
@@ -17,7 +17,7 @@
         %select{name:"executor_id", form:"new_task_form"}
           -project.users.each do |user|
             %option{value: "#{user.id}"}
-              ="#{user.username} - #{user.projects.first.id}"
+              ="#{user.username}"
     %li
       %span{class: 'labels'}
         %label{for: "tester_id"} Tester:
