--- a/views/iteration/new.haml
+++ b/views/iteration/new.haml
@@ -1,4 +1,4 @@
-%form{id: 'new_iteration_form', class: 'form', action: "/projects/#{project_id}/iterations", method: "post"}
+%form{id: 'new_iteration_form', class: 'form', action: "/projects/#{project.id}/iterations", method: "post"}
   %ul
     %li
       %span{class: 'labels'}
