--- a/views/home_layout.haml
+++ b/views/home_layout.haml
@@ -7,8 +7,7 @@
     %title Jenny
     %link{rel: "stylesheet", href: "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"}
     %link{rel: "stylesheet", href: "//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css"}
-    %link{rel: "stylesheet", href: "/public/css/user_login_register.css"}
-    %link{rel: "stylesheet", href: "/public/css/layout.css"}
+    %link{rel: "stylesheet", href: "/public/css/styles.css"}
 
     %script{src: "//code.jquery.com/jquery-1.10.2.min.js"}
     %script{src: "//code.jquery.com/ui/1.10.4/jquery-ui.js"}
