--- a/views/task/edit.haml
+++ b/views/task/edit.haml
@@ -72,4 +72,4 @@
       %span{class: 'values'}
         %input{type: "number", name: "to_do", step: 'any', value: "#{task.to_do}"}
     %li
-      %input{type: "submit", value: "Create", class: "button"}
+      %input{type: "submit", value: "Update", class: "button"}
